--- a/src/OdeToFood/Views/Home/Index.cshtml
+++ b/src/OdeToFood/Views/Home/Index.cshtml
@@ -1,10 +1,20 @@
-﻿@model OdeToFood.Models.Restaurant
+﻿@model IEnumerable<OdeToFood.Models.Restaurant>
 
 <html>
 <head>
     <title>OdeToFood</title>
 </head>
 <body>
-    <h1>@Model.Name</h1>
+    <h1>Welcome!</h1>
+
+    <table>
+        @foreach (var restaurant in Model)
+        {
+            <tr>
+                <td>@restaurant.Id</td>
+                <td>@restaurant.Name</td>
+            </tr>
+        }        
+    </table>
 </body>
 </html>
