Add a view model to hold data from two different services
A view model is used when data from multiple sources needs to be passed
to a view. In this case, a view model with a greeting and the list of
restaurants is set up and passed to the home view.

--- a/src/OdeToFood/Views/Home/Index.cshtml
+++ b/src/OdeToFood/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<OdeToFood.Models.Restaurant>
+﻿@model OdeToFood.ViewModels.HomePageViewModel
 
 <html>
 <head>
@@ -6,9 +6,9 @@
 </head>
 <body>
     <h1>Welcome!</h1>
-
+    <h3>@Model.CurrentMessage</h3>
     <table>
-        @foreach (var restaurant in Model)
+        @foreach (var restaurant in Model.Restaurants)
         {
             <tr>
                 <td>@restaurant.Id</td>
