--- a/src/OdeToFood/Views/Home/Create.cshtml
+++ b/src/OdeToFood/Views/Home/Create.cshtml
@@ -8,11 +8,13 @@
         {
             <div>
                 @Html.LabelFor(m => m.Name)
-                @Html.TextBoxFor(m => m.Name)
+                @Html.EditorFor(m => m.Name)
+                @Html.ValidationMessageFor(m => m.Name)
             </div>
             <div>
                 @Html.LabelFor(m => m.Cuisine)
                 @Html.DropDownListFor(m => m.Cuisine, Html.GetEnumSelectList(typeof(CuisineType)))
+                @Html.ValidationMessageFor(m => m.Cuisine)
             </div>
             <div>
                 <input type="submit" value="Save!" />
