--- a/src/OdeToFood/Views/Home/Index.cshtml
+++ b/src/OdeToFood/Views/Home/Index.cshtml
@@ -1,22 +1,23 @@
 ﻿@model OdeToFood.ViewModels.HomePageViewModel
 
-<html>
-<head>
-    <title>OdeToFood</title>
-</head>
-<body>
-    <h1>Welcome!</h1>
+@{
+    ViewBag.Title = "Home";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h1>Welcome!</h1>
+<table>
+    @foreach (var restaurant in Model.Restaurants)
+    {
+        <tr>
+            <td>
+                @Html.ActionLink("View", "Details", new { id = restaurant.Id })
+            </td>
+            <td>@restaurant.Name</td>
+        </tr>
+    }
+</table>
+
+@section footer {
     <h3>@Model.CurrentMessage</h3>
-    <table>
-        @foreach (var restaurant in Model.Restaurants)
-        {
-            <tr>
-                <td>
-                    @Html.ActionLink("View", "Details", new { id = restaurant.Id })
-                </td>
-                <td>@restaurant.Name</td>
-            </tr>
-        }        
-    </table>
-</body>
-</html>
+}
