Create an edit form using Tag Helpers

--- a/src/OdeToFood/Views/Home/Index.cshtml
+++ b/src/OdeToFood/Views/Home/Index.cshtml
@@ -8,11 +8,12 @@
 <table>
     @foreach (var restaurant in Model.Restaurants)
     {
-        <tr>
+        <tr>            
+            <td>@restaurant.Name</td>
             <td>
                 <a asp-action="Details" asp-route-id="@restaurant.Id">Detail</a>
+                <a asp-action="Edit" asp-route-id="@restaurant.Id">Edit</a>
             </td>
-            <td>@restaurant.Name</td>
         </tr>
     }
 </table>
